# cuda-device-info

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  my_cuda_program  vec_add.cu
examples/: basic_usage.cpp
include/: kernel.h
include/cpl/: common.h  cpl.h  logging.h  matrix.h  memory.h  utils.h  vector.h
matrix_ops/: matrix_ops.cu  matrix_ops.h
src/: kernel.cu  main.cpp
src/matrix/: matrix.cu
src/utilities/: common_utils.cu  device_info.cu  matrix_utils.cu
src/vector/: vector.cu
tests/unit/: test_matrix_ops.cpp  test_vector_ops.cpp
utilities/: matrix_utils.cu  matrix_utils.h  utils.cu
vector_addition/: vec_add.cu
